fix(dropdown-list): Fix class name for visibility state hook

--- a/src/dropdown/list/_dropdown-list.scss
+++ b/src/dropdown/list/_dropdown-list.scss
@@ -46,7 +46,7 @@
   }
 }
 
-.dropdown-list__is-visible {
+.dropdown-list--is-visible {
   visibility: visible;
   opacity: 1;
 }
